--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "yalralloo",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sukhunPark/wetube-2022.git"
+  },
+  "scripts": {
+    "win": "node index.js"
   },
   "author": "Yalralloo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sukhunPark/wetube-2022/issues"
   },
-  "homepage": "https://github.com/sukhunPark/wetube-2022#readme"
+  "homepage": "https://github.com/sukhunPark/wetube-2022#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
