--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "homepage": "https://github.com/sukhunPark/wetube-2022#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10"
   }
 }
